# cpp-project-template

./: CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in
doc/: install_project_on_windows.html
examples/: CMakeLists.txt  demo.cpp
src/: CMakeLists.txt
