if (BUILD_EXAMPLES)
  set(TARGET_NAME demo)
  add_executable(${TARGET_NAME} ${TARGET_NAME}.cpp)
  target_link_libraries(${TARGET_NAME} ${PROJECT_NAME}_lib)
  set_target_properties(${TARGET_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
  install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
endif()
